@@ -83,7 +83,7 @@
 		</div>
 	    </div>
 	    <div class="tab-pane" id="tab-member">
-		<?php echo $this->memberPanel('user_'.$this->id, new Knowledgeroot_User($this->id), array('show_users' => false)); ?>
+		<?php echo $this->memberPanel('user', new Knowledgeroot_User($this->id), array('show_users' => false)); ?>
 	    </div>
 	</div>
 
