@@ -1,3 +1,6 @@
+20130820 - fhabermann
+* saving memberships
+
 20130819 - fhabermann
 * show inverse members in memberpanel
 
